--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -273,15 +273,17 @@ CONFIG_CC_STACKPROTECTOR=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_THIN_ARCHIVES=y
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
-# CONFIG_LTO is not set
+CONFIG_LTO=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_ARCH_SUPPORTS_THINLTO=y
-CONFIG_LTO_NONE=y
-# CONFIG_LTO_CLANG is not set
+CONFIG_THINLTO=y
+# CONFIG_LTO_NONE is not set
+CONFIG_LTO_CLANG=y
+# CONFIG_CFI_CLANG is not set
 CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
 CONFIG_ROP_PROTECTION_NONE=y
 # CONFIG_SHADOW_CALL_STACK is not set
-# CONFIG_LLVM_POLLY is not set
+CONFIG_LLVM_POLLY=y
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
@@ -670,7 +672,6 @@ CONFIG_ARM64_UAO=y
 # CONFIG_ARM64_PMEM is not set
 CONFIG_RELOCATABLE=y
 CONFIG_RANDOMIZE_BASE=y
-CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 
 #
 # Boot options
