--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -562,6 +562,8 @@ CONFIG_ARM64_VA_BITS=39
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_NR_CPUS=8
+CONFIG_LITTLE_CPU_MASK=63
+CONFIG_BIG_CPU_MASK=192
 CONFIG_HOTPLUG_CPU=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE=y
@@ -4380,7 +4382,6 @@ CONFIG_ION=y
 # CONFIG_ION_CARVEOUT_HEAP is not set
 # CONFIG_ION_CHUNK_HEAP is not set
 # CONFIG_ION_CMA_HEAP is not set
-# CONFIG_ION_FORCE_DMA_SYNC is not set
 CONFIG_ION_DEFER_FREE_NO_SCHED_IDLE=y
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_DGNC is not set
