--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -1488,6 +1488,7 @@ CONFIG_UID_SYS_STATS=y
 CONFIG_MEMORY_STATE_TIME=y
 # CONFIG_QPNP_MISC is not set
 CONFIG_LDO_WL2866D=y
+CONFIG_BATTERY_SAVER=y
 # CONFIG_C2PORT is not set
 
 #
