--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -4635,6 +4635,10 @@ CONFIG_DEVFREQ_SIMPLE_DEV=y
 CONFIG_QCOM_DEVFREQ_DEVBW=y
 # CONFIG_DEVFREQ_SPDM is not set
 CONFIG_DEVFREQ_GOV_CDSPL3=y
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=80
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=500
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=7110
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_EXTCON=y
 
