--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -272,11 +272,13 @@ CONFIG_CC_STACKPROTECTOR=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_THIN_ARCHIVES=y
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
-# CONFIG_LTO is not set
+CONFIG_LTO=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_ARCH_SUPPORTS_THINLTO=y
-CONFIG_LTO_NONE=y
-# CONFIG_LTO_CLANG is not set
+# CONFIG_THINLTO is not set
+# CONFIG_LTO_NONE is not set
+CONFIG_LTO_CLANG=y
+# CONFIG_CFI_CLANG is not set
 CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
 CONFIG_ROP_PROTECTION_NONE=y
 # CONFIG_SHADOW_CALL_STACK is not set
@@ -668,7 +670,6 @@ CONFIG_ARM64_UAO=y
 # CONFIG_ARM64_PMEM is not set
 CONFIG_RELOCATABLE=y
 CONFIG_RANDOMIZE_BASE=y
-CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 
 #
 # Boot options
