--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -4556,8 +4556,7 @@ CONFIG_ICNSS=y
 CONFIG_ICNSS_QMI=y
 # CONFIG_CNSS_TIMESYNC is not set
 CONFIG_QCOM_EUD=y
-CONFIG_QCOM_MINIDUMP=y
-CONFIG_MINIDUMP_MAX_ENTRIES=200
+# CONFIG_QCOM_MINIDUMP is not set
 CONFIG_QCOM_BUS_SCALING=y
 CONFIG_QCOM_BUS_CONFIG_RPMH=y
 CONFIG_QCOM_COMMAND_DB=y
