--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.258 Kernel Configuration
+# Linux/arm64 4.14.259 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -3181,7 +3181,7 @@ CONFIG_DRM_SDE_WB=y
 CONFIG_DRM_MSM_KCAL_CTRL=y
 # CONFIG_DRM_SDE_EVTLOG_DEBUG is not set
 CONFIG_DRM_SDE_RSC=y
-# CONFIG_FENCE_DEBUG is not set
+CONFIG_FENCE_DEBUG=y
 # CONFIG_DRM_MSM_LEASE is not set
 CONFIG_DRM_PANEL=y
 
