--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -2289,7 +2289,7 @@ CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO_RESTART is not set
 # CONFIG_POWER_RESET_LTC2952 is not set
 CONFIG_POWER_RESET_QCOM=y
-CONFIG_QCOM_DLOAD_MODE=y
+# CONFIG_QCOM_DLOAD_MODE is not set
 # CONFIG_POWER_RESET_RESTART is not set
 # CONFIG_POWER_RESET_XGENE is not set
 # CONFIG_POWER_RESET_SYSCON is not set
@@ -4140,7 +4140,6 @@ CONFIG_ICNSS=y
 CONFIG_ICNSS_QMI=y
 # CONFIG_CNSS_TIMESYNC is not set
 # CONFIG_QCOM_EUD is not set
-# CONFIG_QCOM_MINIDUMP is not set
 CONFIG_QCOM_BUS_SCALING=y
 CONFIG_QCOM_BUS_CONFIG_RPMH=y
 CONFIG_QCOM_COMMAND_DB=y
