--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -328,36 +328,41 @@
 		};
 
 		cpu-map {
-			core0 {
-				cpu = <&CPU0>;
+			cluster0 {
+				core0 {
+					cpu = <&CPU0>;
+				};
+
+				core1 {
+					cpu = <&CPU1>;
+				};
+
+				core2 {
+					cpu = <&CPU2>;
+				};
+
+				core3 {
+					cpu = <&CPU3>;
+				};
+
+				core4 {
+					cpu = <&CPU4>;
+				};
+
+				core5 {
+					cpu = <&CPU5>;
+				};
+
 			};
 
-			core1 {
-				cpu = <&CPU1>;
-			};
+			cluster1 {
+				core0 {
+					cpu = <&CPU6>;
+				};
 
-			core2 {
-				cpu = <&CPU2>;
-			};
-
-			core3 {
-				cpu = <&CPU3>;
-			};
-
-			core4 {
-				cpu = <&CPU4>;
-			};
-
-			core5 {
-				cpu = <&CPU5>;
-			};
-
-			core6 {
-				cpu = <&CPU6>;
-			};
-
-			core7 {
-				cpu = <&CPU7>;
+				core1 {
+					cpu = <&CPU7>;
+				};
 			};
 		};
 	};
