--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -1396,7 +1396,7 @@ CONFIG_ZRAM=y
 # CONFIG_ZRAM_DEF_COMP_LZO is not set
 CONFIG_ZRAM_DEF_COMP_ZSTD=y
 CONFIG_ZRAM_DEF_COMP="zstd"
-# CONFIG_ZRAM_DEDUP is not set
+CONFIG_ZRAM_DEDUP=y
 CONFIG_ZRAM_WRITEBACK=y
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
